--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -36,7 +36,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <button (click)="deleted()" class="navbar-link jj-button">
+        <button (click)="commit(websiteId, name.valueOf(), description.valueOf())" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-ok"></span>
         </button>
       </p>
