Updated routing links

--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -27,9 +27,9 @@
       <li class="list-group-item">
         <div class="row">
           <div class="col-xs-9">
-            <a (click)="goToWidgets(page._id)">
+            <button class="jj-button-cog" (click)="goToWidgets(page._id)">
               {{page.name}}
-            </a>
+            </button>
           </div>
           <div class="col-xs-3">
             <button class="pull-right jj-button-cog" (click)="editPage(page._id)">
