Updates to deleting of pages and elements

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -88,8 +88,8 @@
                     class="form-control"></textarea>
         </div>
       </form>
-      <button (click)="goToPages()"
-              class="btn btn-danger btn-block"
+      <button (click)="deleted(pageId)"
+              class="btn btn-danger btn-block jj-button-hover"
               aria-pressed="true">
         Delete
       </button>
