--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -41,13 +41,13 @@
     </span>
 
     <button (click)="login()"
-            class="btn btn-primary btn-block"
+            class="btn btn-primary btn-block jj-button-hover"
             type="submit"
             [disabled]="!f.valid">
       Login
     </button>
     <button (click)="buttonClicked($event)"
-            class="btn btn-success btn-block"
+            class="btn btn-success btn-block jj-button-hover"
             aria-pressed="true"
             [routerLink]="['/register']">
       Register
