--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -66,11 +66,11 @@
   </form>
 
   <button (click)="websites()"
-          class="btn btn-primary btn-block"
+          class="btn btn-primary btn-block jj-button-hover"
           aria-pressed="true">
     Websites
   </button>
-  <button class="btn btn-danger btn-block"
+  <button class="btn btn-danger btn-block jj-button-hover"
           aria-pressed="true"
           [routerLink]="['/login']">
     Logout
