--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -94,8 +94,8 @@
           class="form-control"></textarea>
       </div>
 
-      <button (click)="deleted()"
-              class="btn btn-danger btn-block"
+      <button (click)="deleted(websiteId)"
+              class="btn btn-danger btn-block jj-button-hover"
               aria-pressed="true">
         Delete
       </button>
