--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -64,7 +64,7 @@
                />
       </div>
     </form>
-    <button (click)="goToWidgets()"
+    <button (click)="deleted(wgid)"
             class="btn btn-danger btn-block jj-button-hover jj-center"
             aria-pressed="true">
       Delete
