--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -81,7 +81,7 @@
        [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']">
       Upload Image
     </a>
-    <button (click)="goToWidgets()"
+    <button (click)="deleted(wgid)"
             class="btn btn-danger btn-block jj-button-hover jj-center"
             aria-pressed="true">
       Delete
