--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -62,7 +62,7 @@
                type="text"/>
       </div>
     </form>
-    <button (click)="goToWidgets()"
+    <button (click)="deleted(wgid)"
             class="btn btn-danger btn-block jj-button-hover jj-center"
             aria-pressed="true">
       Delete
