--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <button (click)="deleted()" class="navbar-link jj-button">
+        <button (click)="cancel()" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </button>
       </div>
