--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <h1>Register</h1>
-  <form (ngSubmit)="register()" #f="ngForm">
+  <form (ngSubmit)="register(username.value)" #f="ngForm">
     <input name="username"
            id="username"
            type="text"
