--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <h1>Register</h1>
-  <form (ngSubmit)="register(username.value)" #f="ngForm">
+  <form (ngSubmit)="register()" #f="ngForm">
     <input name="username"
            id="username"
            type="text"
@@ -87,8 +87,7 @@
     Register
   </button>
 
-  <button (click)="buttonClicked($event)"
-          class="btn btn-danger btn-block jj-button-hover"
+  <button class="btn btn-danger btn-block jj-button-hover"
           aria-pressed="true"
           [routerLink]="['/login']">
     Cancel
