Allowing for deletion of user

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -75,6 +75,11 @@
           [routerLink]="['/login']">
     Logout
   </button>
+  <button class="btn btn-danger btn-block jj-button-hover"
+          aria-pressed="true"
+          (click)="deleteAccount(userId)">
+    Delete Account
+  </button>
 
 </div>
 
