button color change in profile

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -70,7 +70,7 @@
           aria-pressed="true">
     Websites
   </button>
-  <button class="btn btn-danger btn-block jj-button-hover"
+  <button class="btn btn-warning btn-block jj-button-hover"
           aria-pressed="true"
           [routerLink]="['/login']">
     Logout
