--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -30,7 +30,7 @@
     <div *ngSwitchCase="'HEADING'">
       <div class="jj-widget">
         <div class="jj-toolbar">
-          <button class="jj-button-cog" (click)="editWidget(widget._id)">
+          <button class="jj-button-cog" (click)="editWidget(widget._id, widget.widgetType)">
             <span class="glyphicon glyphicon-cog"></span>
           </button>
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -49,7 +49,7 @@
     <div *ngSwitchCase="'YOUTUBE'">
       <div class="jj-widget">
         <div class="jj-toolbar">
-          <button class="jj-button-cog" (click)="editWidget(widget._id)">
+          <button class="jj-button-cog" (click)="editWidget(widget._id, widget.widgetType)">
             <span class="glyphicon glyphicon-cog"></span>
           </button>
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -66,7 +66,7 @@
     <ng-container *ngSwitchCase="'IMAGE'">
       <div class="jj-widget">
         <div class="jj-toolbar">
-          <button class="jj-button-cog" (click)="editWidget(widget._id)">
+          <button class="jj-button-cog" (click)="editWidget(widget._id, widget.widgetType)">
             <span class="glyphicon glyphicon-cog"></span>
           </button>
           <span class="glyphicon glyphicon-menu-hamburger"></span>
@@ -77,7 +77,7 @@
     <div *ngSwitchCase="'HTML'">
       <div class="jj-widget">
         <div class="jj-toolbar">
-          <button class="jj-button-cog" (click)="editWidget(widget._id)">
+          <button class="jj-button-cog" (click)="editWidget(widget._id, widget.widgetType)">
             <span class="glyphicon glyphicon-cog"></span>
           </button>
           <span class="glyphicon glyphicon-menu-hamburger"></span>
