--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -56,7 +56,7 @@
         </div>
         <iframe class="jj-content"
                 [src]="cleanURL(widget.url)"
-                width="{{widget.width}}"
+                [style.width]="widget.width"
                 height="315"
                 frameborder="0"
                 allowfullscreen></iframe>
