--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -38,8 +38,7 @@
             [disabled]="!f.valid">
       Login
     </button>
-    <button (click)="buttonClicked($event)"
-            class="btn btn-success btn-block jj-button-hover"
+    <button class="btn btn-success btn-block jj-button-hover"
             aria-pressed="true"
             [routerLink]="['/register']">
       Register
