--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -62,7 +62,7 @@
                value="100%"/>
       </div>
     </form>
-    <form ngNoForm action="{{baseUrl}}/api/upload" method="post" enctype="multipart/form-data" class="jj-form">
+    <form ngNoForm action="http://localhost:3100/api/upload" method="post" enctype="multipart/form-data" class="jj-form">
       <div class="form-group">
         <input
           type="file"
@@ -70,11 +70,11 @@
           class="form-control"/>
         <input
           name="widgetId"
-          value="{{widgetId}}"
+          value="{{wgid}}"
           style="display: none"/>
         <input
           name="websiteId"
-          value="{{websiteId}}"
+          value="{{webId}}"
           style="display: none"/>
         <input
           name="pageId"
