--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <button (click)="commit(width.valueOf(), url.valueOf())" class="navbar-link jj-button">
+        <button (click)="commit(width, url)" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-ok"></span>
         </button>
       </p>
@@ -87,7 +87,8 @@
         <a class="btn btn-block btn-primary jj-button-hover jj-center"
            role="button"
            type="submit"
-           aria-pressed="true">
+           aria-pressed="true"
+            (click)="commit(width, url)">
           Upload Image
         </a>
       </div>
