--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -62,6 +62,7 @@
                value="100%"/>
       </div>
     </form>
+    {{wgid}}
     <form ngNoForm action="http://localhost:3100/api/upload" method="post" enctype="multipart/form-data">
       <input  name="myFile"   type="file" class="form-control"/>
       <input  name="widgetId" value="{{wgid}}"   style="display: none"/>
