--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -11,7 +11,7 @@
     </p>
 
     <p class="navbar-text pull-right">
-      <button (click)="goToProfile(userId, username.valueOf(), email.valueOf(), firstName.valueOf(), lastName.valueOf())"  class="navbar-link jj-button">
+      <button (click)="goToProfile(username, email, firstName, lastName)"  class="navbar-link jj-button">
         <span class="jj-button-text glyphicon glyphicon-ok"></span>
       </button>
     </p>
