--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div *ngSwitchCase="'YOUTUBE'">
+    <div *ngSwitchCase="'YOUTUBE'" class="youtube-widget">
       <div class="jj-widget">
         <div class="jj-toolbar">
           <button class="jj-button-cog" (click)="editWidget(widget._id, widget.widgetType)">
