--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -23,8 +23,8 @@
     <ul><button class="jj-button-cog" (click)="makeWidget('IMAGE')"> Image</button></ul>
     <ul><button class="jj-button-cog" (click)="makeWidget('YOUTUBE')"> YouTube</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Label</button></ul>
-    <ul><button class="jj-button-cog" (click)="chooseWidget()"> HTML</button></ul>
-    <ul><button class="jj-button-cog" (click)="chooseWidget()"> Text Input</button></ul>
+    <ul><button class="jj-button-cog" (click)="makeWidget('HTML')"> HTML</button></ul>
+    <ul><button class="jj-button-cog" (click)="makeWidget('TEXT')"> Text Input</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Link</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Button</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Data Table</button></ul>
