--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -12,5 +12,13 @@
       <app-widget-youtube></app-widget-youtube>
     </div>
 
+    <div *ngSwitchCase="'HTML'">
+      <app-widget-html></app-widget-html>
+    </div>
+
+    <div *ngSwitchCase="'TEXT'">
+      <app-widget-text></app-widget-text>
+    </div>
+
   </div>
 
