working on widget text and widget html

--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -26,7 +26,7 @@
 <div>
   <div>
 Text
-<input [(ngModel)]="widget.text" class="form-control"/>
+<input [(ngModel)]="text" class="form-control"/>
 
 Rows
 <input [(ngModel)]="rows" class="form-control" type="number"/>
